--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@
 [Ll]ogs/
 [Uu]ser[Ss]ettings/
 [Uu][Ii][Ee]lements[Ss]chema/
+[Bb]uilds/
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
